fixed really unnerving style bug on spam page

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/spam.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/spam.jspx
@@ -40,6 +40,11 @@
 					border: 1px solid #ccc;
 				}
 			
+				.logbox {
+					overflow-y:scroll;
+					height:100px;
+				}
+				
 			</style>
 			
 			<!--include spammer scripts -->
