added new line between authors / editors and other publication information

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -80,6 +80,11 @@
 	}
 }
 
+span.community-approved {
+	margin-left: 5px;
+	font-size: 70%;
+}
+
 #linksresources, #related-publications-references {
 	margin-top: 0.5em;
 }
