fixed search info button positioning

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -166,8 +166,20 @@ a, .btn-link {
 	color: @link-color;
 }
 
-#search ul.dropdown-menu li a {
-	cursor: pointer;
+#search {
+	a.input-info {
+		color: black;
+		float: right;
+		margin-right: 5px;
+		margin-top: -27px;
+		position: relative;
+		z-index: 2;
+		opacity: 0.5;
+	}
+	
+	ul.dropdown-menu li a {
+		cursor: pointer;
+	}
 }
 
 
