new logging schema for posts replaced PostChangeLogParam by reworked LoggingParam fixed accidental double logging when updating a post

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1403,6 +1403,7 @@ ul#urlList {
 .btn-group > form:last-child > .btn {
 	margin-right: 0;
 	.border-left-radius(0);
+}
 
 /******** menu adjustment ********/
 #menu-user-icon-toggle-button {
