--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -468,14 +468,6 @@ li.post div.fa-eye-slash {
 	z-index: 2;
 }
 
-.post.odd {
-}
-
-
-.publication-list .post {	
-
-}
-
 .post-row {
 	height: 120px;
 	overflow: hidden;
@@ -1453,7 +1445,7 @@ ul#urlList {
 	.border-left-radius(0);
 }
 
-/******** menu adjustment ********/
+/* menu adjustment */
 #menu-user-icon-toggle-button {
 	border: none !important;
 }
