--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/sync.jspx
@@ -66,7 +66,7 @@
 				<form:form action="/ajax/synchronize" method="post" id="sync_${status.index}">
 					
 					<!-- show initial auto-sync message -->
-				 	<c:if test="${service.alreadySyncedOnce eq false}">
+				 	<c:if test="${not service.alreadySyncedOnce}">
 						<fmt:message var="firstAutoSyncInfoMessage" key="sync.auto.firstsync.required"/>
 						<bs:alert style="info">
 							<jsp:attribute name="alertBody">
