--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help.jspx
@@ -11,6 +11,10 @@
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	<layout:oneColumnLayout loginUser="${command.context.loginUser}" pageTitle="" requPath="${requPath}">
 	
+		<jsp:attribute name="headerExt">
+			<link rel="stylesheet" type="text/css"	href="${resdir}/css/help.css" />
+		</jsp:attribute>
+	
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="error"/>
 		</jsp:attribute>
@@ -18,11 +22,11 @@
 		<jsp:attribute name="content">
 		
 			<div class="row">
-				<div class="hidden-xs col-sm-3 list-group section-scroll">
+				<div class="hidden-xs col-sm-3 list-group section-scroll" id="help-sidebar">
 					<c:out value="${command.sidebar}" escapeXml="false" />		
 				</div>
 				
-				<div class="col-sm-9">
+				<div class="col-sm-9" id="help-main">
 					<c:choose>
 						<c:when test="${!command.pageNotFound}">
 							<c:out value="${command.content}" escapeXml="false" />
@@ -31,7 +35,7 @@
 							<div class="text-center">
 								<h1><fmt:message key="error.404.header" /></h1>
 								<p class="lead"><fmt:message key="error.404" /></p>
-								<img src="/resources/image/404.jpg" />
+								<img src="/resources/image/404.jpg" style="width: auto;"/>
 							</div>
 						</c:otherwise>
 					</c:choose>
