added gui for admin group deletion started working on backend

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
@@ -63,6 +63,22 @@
 				</bs:feedback>
 			</div>
 			</c:if>
+			
+			<bsform:fieldset legendKey="settings.group.admin.deleteGroup">
+				<jsp:attribute name="content">
+					Enter the name of the group that you want to have deleted. The corresponding group will kick out all members and then
+					be deleted.
+					<form:form name="groupInfo" action="${relativeUrlGenerator.getAdminUrlByName('group')}" method="POST" cssClass="form-horizontal">
+						<input type="hidden" value="DELETE_GROUP" name="action" />
+						<bsform:input labelColSpan="3" inputColSpan="9" id="fetchGroupInfo" path="group.name" />
+						<div class="form-group">
+							<div class="col-sm-offset-3 col-sm-9">
+								<bsform:button type="submit" style="primary" size="defaultSize" value="Delete Group" />
+							</div>
+						</div>
+					</form:form>
+				</jsp:attribute>
+			</bsform:fieldset>
 
 			<bsform:fieldset legendKey="settings.group.permissionHeading">
 				<jsp:attribute name="content">
@@ -135,7 +151,7 @@
 									</td>
 									<td>
 										<span class="groupsButtons">
-											<a href="/admin/group?action=ACCEPT&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.accept"/></a>
+											<a href="/admin/group?action=ACCEPT_GROUP&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.accept"/></a>
 											${mtl:ch('nbsp')}
 											<a href="javascript:void(0)" class="declineGroupExpand" onclick="declineGroup(this);"><fmt:message key="admin.actions.group.decline"/></a>	
 										</span>
@@ -149,7 +165,7 @@
 											<fmt:param value="${fn:escapeXml(entry.name)}" />
 										</fmt:message>
 									
-										<form:form name="declineGroupRequest" action="/admin/group?action=DECLINE&amp;group.name=${fn:escapeXml(entry.name)}" method="POST" cssClass="form-horizontal" >
+										<form:form name="declineGroupRequest" action="/admin/group?action=DECLINE_GROUP&amp;group.name=${fn:escapeXml(entry.name)}" method="POST" cssClass="form-horizontal" >
 											<bsform:textarea noHelp="true" labelText="${decLabelText}" path="declineMessage" labelColSpan="3" inputColSpan="9" />
 											
 											<div class="form-group">
