--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -16,7 +16,7 @@
 			display: inline-block;
 			padding: 2px 5px 3px;
 			margin: 0.8em;
-			background-color: @main-color;
+			border: 1px solid @main-color;
 			font-weight: 700;
 			line-height: 1;
 			text-align: center;
@@ -24,7 +24,7 @@
 			vertical-align: baseline;
 			border-radius: .25em;
 			a {
-				color: white;
+				color: @main-color;
 			}
 		}
 		
