added link to publication of the user

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -854,7 +854,7 @@ img.user-avatar {
 	display: block;
 }
 
-a.img-thumbnail span {
+.img-thumbnail span {
 	display: block;
 	position: relative;
 	font-size: 11px;
