--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -50,6 +50,17 @@
 		margin-bottom: 50px;
 	}
 	
+	.community-page-user-list {
+		.thumbnail {
+			margin-bottom: 0px;
+			border-bottom: none;
+		}
+		
+		.btn-block {
+			margin-bottom: 20px;
+		}
+	}
+	
 	#related-publications {
 		ul {
 			padding-left: 0px;
