working on headline problem

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -10,6 +10,16 @@
 		}
 	}
 	
+	.content-header {
+		border-bottom: none;
+		margin-bottom: 0px;
+	}
+	
+	h2 {
+		padding-bottom: 5px;
+		height: auto;
+	}
+	
 	.tagcloud {
 		text-align: center;
 		.tag {
