fixed socializer layout

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -702,8 +702,7 @@ ul.news {
 }
 
 #relations>li a {
-	color:#2F3321 !important;
-	
+	color: #2F3321 !important;
 }
 
 #relations li ul li a,
@@ -1176,6 +1175,10 @@ div.clearline {
 	border: none;
 	font-size: 18px;
 	height: auto;
+}
+
+.socializer .img-thumbnail {
+	margin-right: 20px;
 }
 
 .alert a {
