fixed tag padding
smaller user image

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -25,7 +25,7 @@
 		.tag {
 			display: inline-block;
 			padding: 2px 5px 3px;
-			margin: 0.8em;
+			margin: 0.8em 0.4em;
 			border: 1px solid @main-color;
 			font-weight: 700;
 			line-height: 1;
@@ -68,6 +68,11 @@
 		
 		.btn-block {
 			margin-bottom: 20px;
+		}
+		
+		.user-avatar {
+			max-width: 40px;
+			max-height: 40px;
 		}
 	}
 	
