fixed long links

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -589,6 +589,14 @@ ul.tags li {
 	font-size: 130% !important;
 }
 
+a.description-link {
+	width: 315px;
+	display: block;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
 /**
  * SIDEBAR
  */
