--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -948,6 +948,14 @@ ul.edit-document-forms li {
 	margin-bottom: 1em;
 }
 
+ul.edit-added-files li {
+	margin-top: 10px;
+}
+
+a.edit-added-files {
+	margin-right: 10px;
+}
+
 a.doc-magnify {
 	color: white;
 	padding: 5px;
