--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help.jspx
@@ -6,10 +6,11 @@
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/tags"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/layout/parts"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/layout">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<layout:oneColumnLayout loginUser="${command.context.loginUser}" pageTitle="" requPath="${requPath}">
+	<layout:oneColumnLayout loginUser="${command.context.loginUser}" pageTitle="${command.helpPage}" requPath="${requPath}">
 	
 		<jsp:attribute name="headerExt">
 			<link rel="stylesheet" type="text/css"	href="${resdir}/css/help.css" />
@@ -20,13 +21,12 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
-		
 			<div class="row">
-				<div class="hidden-xs col-sm-3 list-group section-scroll" id="help-sidebar">
+				<div class="hidden-xs col-sm-offset-1 col-sm-3 list-group section-scroll" id="help-sidebar">
 					<c:out value="${command.sidebar}" escapeXml="false" />		
 				</div>
 				
-				<div class="col-sm-9" id="help-main">
+				<div class="col-sm-7" id="help-main">
 					<c:choose>
 						<c:when test="${!command.pageNotFound}">
 							<c:out value="${command.content}" escapeXml="false" />
