--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/user/passwordReminder.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/user/passwordReminder.jspx
@@ -53,6 +53,9 @@
 								<!-- CAPTCHA -->
 								<bsform:captcha labelColSpan="3"/>
 								
+								<!-- CKEY -->
+								<input type="hidden" name="ckey" value="${ckey}"/>
+								
 								<!-- SUBMIT -->
 								<div class="form-group clearfix">
 									<div class="col-sm-offset-3">
