--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
@@ -14,7 +14,9 @@
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
-	<fmt:message key="persons.intro.head.title" var="personIntroTitle" />
+	<fmt:message key="persons.intro.head.title" var="personIntroTitle">
+		<fmt:param value="${properties['project.name']}" />
+	</fmt:message>
 
 	<layout:paneLayout pageTitle="${personIntroTitle}" headerMessageKey="gettingStarted.headline" command="${command}" requPath="${requPath}" noSidebar="${true}" activeTab="persons">
 
@@ -51,9 +53,7 @@
 					<div class="text-center head">
 					
 						<h1>
-							<fmt:message key="persons.intro.head.title">
-								<fmt:param value="${properties['project.name']}" />
-							</fmt:message>
+							<c:out value="${personIntroTitle}" />
 						</h1>
 						
 						<!-- 
