--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1497,6 +1497,10 @@ ul#urlList {
 	overflow: hidden;
 }
 
+.fa-space-5 {
+	margin-right: 5px;
+}
+
 .btn-group-wrap-text {
 	white-space: normal !important;
 	font-size: 12px !important;
