nicer related users on community page

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -119,6 +119,12 @@ li.comment, li.review, li.discussionitem {
 	}
 }
 
+li.discussionitem {
+	.media-left {
+		padding-right: 15px;
+	}
+}
+
 .group-selector > .dropdown-menu > .checked:before {
 	content: @fa-var-check;
 	font-family: FontAwesome;
