--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -66,13 +66,21 @@
 			border-bottom: none;
 		}
 		
-		.btn-block {
-			margin-bottom: 20px;
-		}
-		
 		.user-avatar {
 			max-width: 40px;
 			max-height: 40px;
+		}
+		
+		li.user-card {
+			border: 1px solid #EEE;
+			margin-right: 10px;
+			padding-top: 10px;
+			width: 55px;
+			padding-bottom: 10px;
+			border-radius: 5px;
+			.btn {
+				margin-top: 5px;
+			}
 		}
 	}
 	
