--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1343,6 +1343,25 @@ a.ui-corner-all:active {
 	float: right;
 }
 
+.main .group-card {
+	text-align: center;
+	padding-top: 10px;
+	
+	.group-img {
+		width: 96px;
+		height: 96px;
+	}
+	h4 {
+		border: none;
+		margin-bottom: 2px;
+		
+		small {
+			margin-left: 3px;
+		}
+	}
+	
+}
+
 #userImg > img {
 	margin: 7px;
 	padding: 5px;
